include/dss_capi.h

    DSS_CAPI_DLL double CNData_Get_Rdc(void);
    DSS_CAPI_DLL void CNData_Set_Rdc(double Value);
    DSS_CAPI_DLL double CNData_Get_Rac(void);
    DSS_CAPI_DLL void CNData_Set_Rac(double Value);
    DSS_CAPI_DLL double CNData_Get_GMRac(void);
    DSS_CAPI_DLL void CNData_Set_GMRac(double Value);
    DSS_CAPI_DLL int32_t CNData_Get_GMRUnits(void);
    DSS_CAPI_DLL void CNData_Set_GMRUnits(int32_t Value);
    DSS_CAPI_DLL double CNData_Get_Radius(void);
    DSS_CAPI_DLL void CNData_Set_Radius(double Value);
    DSS_CAPI_DLL int32_t CNData_Get_RadiusUnits(void);
    DSS_CAPI_DLL void CNData_Set_RadiusUnits(int32_t Value);
    DSS_CAPI_DLL int32_t CNData_Get_ResistanceUnits(void);
    DSS_CAPI_DLL void CNData_Set_ResistanceUnits(int32_t Value);
    DSS_CAPI_DLL double CNData_Get_Diameter(void);
    DSS_CAPI_DLL void CNData_Set_Diameter(double Value);
    DSS_CAPI_DLL double CNData_Get_EmergAmps(void);
    DSS_CAPI_DLL void CNData_Set_EmergAmps(double Value);
    DSS_CAPI_DLL double CNData_Get_EpsR(void);
    DSS_CAPI_DLL void CNData_Set_EpsR(double Value);
    DSS_CAPI_DLL double CNData_Get_InsLayer(void);
    DSS_CAPI_DLL void CNData_Set_InsLayer(double Value);
    DSS_CAPI_DLL double CNData_Get_DiaIns(void);
    DSS_CAPI_DLL void CNData_Set_DiaIns(double Value);
    DSS_CAPI_DLL double CNData_Get_DiaCable(void);
    DSS_CAPI_DLL void CNData_Set_DiaCable(double Value);
    DSS_CAPI_DLL int32_t CNData_Get_k(void);
    DSS_CAPI_DLL void CNData_Set_k(int32_t Value);
    DSS_CAPI_DLL double CNData_Get_DiaStrand(void);
    DSS_CAPI_DLL void CNData_Set_DiaStrand(double Value);
    DSS_CAPI_DLL double CNData_Get_GmrStrand(void);
    DSS_CAPI_DLL void CNData_Set_GmrStrand(double Value);
    DSS_CAPI_DLL double CNData_Get_RStrand(void);
    DSS_CAPI_DLL void CNData_Set_RStrand(double Value);