src/v7/CAPI_CNData.pas


end;
//------------------------------------------------------------------------------
FUNCTION CNData_Get_EmergAmps():Double;cdecl;
Var
   pCNData:TCNDataObj;
begin
  Result := 0;
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       Result := pCNData.EmergAmps;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE CNData_Set_EmergAmps(Value: Double);cdecl;
Var
   pCNData:TCNDataObj;
begin
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       pCNData.EmergAmps := Value;
       ConductorSetDefaults(ConductorProps.EmergAmps, pCNData);
  End;
end;
//------------------------------------------------------------------------------
FUNCTION CNData_Get_Diameter():Double;cdecl;
Var
   pCNData:TCNDataObj;
begin
  Result := 0;
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       Result := pCNData.FRadius * 2.0;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE CNData_Set_Diameter(Value: Double);cdecl;
Var
   pCNData:TCNDataObj;
begin
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       with pCNData do 
       begin
          FRadius := Value / 2.0;
          ConductorSetDefaults(ConductorProps.diam, pCNData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION CNData_Get_Radius():Double;cdecl;
Var
   pCNData:TCNDataObj;
begin
  Result := 0;
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       Result := pCNData.FRadius;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE CNData_Set_Radius(Value: Double);cdecl;
Var
   pCNData:TCNDataObj;
begin
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       with pCNData do 
       begin
          FRadius := Value;
          ConductorSetDefaults(ConductorProps.Radius, pCNData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION CNData_Get_GMRac():Double;cdecl;
Var
   pCNData:TCNDataObj;
begin
  Result := 0;
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       Result := pCNData.FGMR60;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE CNData_Set_GMRac(Value: Double);cdecl;
Var
   pCNData:TCNDataObj;
begin
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       with pCNData do 
       begin
          FGMR60 := Value;
          ConductorSetDefaults(ConductorProps.GMRac, pCNData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION CNData_Get_Rac():Double;cdecl;
Var
   pCNData:TCNDataObj;
begin
  Result := 0;
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       Result := pCNData.FR60;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE CNData_Set_Rac(Value: Double);cdecl;
Var
   pCNData:TCNDataObj;
begin
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       with pCNData do 
       begin
          FR60 := Value;
          ConductorSetDefaults(ConductorProps.Rac, pCNData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION CNData_Get_Rdc():Double;cdecl;
Var
   pCNData:TCNDataObj;
begin
  Result := 0;
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       Result := pCNData.FRDC;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE CNData_Set_Rdc(Value: Double);cdecl;
Var
   pCNData:TCNDataObj;
begin
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       with pCNData do 
       begin
          FRDC := Value;
          ConductorSetDefaults(ConductorProps.Rdc, pCNData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION CNData_Get_GMRUnits():Integer;cdecl;
Var
   pCNData:TCNDataObj;
begin
  Result := 0;
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       Result := pCNData.FGMRUnits;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE CNData_Set_GMRUnits(Value: Integer);cdecl;
Var
   pCNData:TCNDataObj;
begin
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       with pCNData do 
       begin
          FGMRUnits := Value;
          ConductorSetDefaults(ConductorProps.GMRunits, pCNData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION CNData_Get_RadiusUnits():Integer;cdecl;
Var
   pCNData:TCNDataObj;
begin
  Result := 0;
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       Result := pCNData.FRadiusUnits;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE CNData_Set_RadiusUnits(Value: Integer);cdecl;
Var
   pCNData:TCNDataObj;
begin
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       with pCNData do 
       begin
          FRadiusUnits := Value;
          ConductorSetDefaults(ConductorProps.radunits, pCNData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION CNData_Get_ResistanceUnits():Integer;cdecl;
Var
   pCNData:TCNDataObj;
begin
  Result := 0;
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       Result := pCNData.FResistanceUnits;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE CNData_Set_ResistanceUnits(Value: Integer);cdecl;
Var
   pCNData:TCNDataObj;
begin
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       with pCNData do 
       begin
          FResistanceUnits := Value;
          ConductorSetDefaults(ConductorProps.Runits, pCNData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION CNData_Get_EpsR():Double;cdecl;
Var
   pCNData:TCNDataObj;
begin
  Result := 0;
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       Result := pCNData.FEpsR;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE CNData_Set_EpsR(Value: Double);cdecl;
Var
   pCNData:TCNDataObj;
begin
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       with pCNData do 
       begin
          FEpsR := Value;
          CableDataSetDefaults(CableDataProps.EpsR, pCNData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION CNData_Get_InsLayer():Double;cdecl;
Var
   pCNData:TCNDataObj;
begin
  Result := 0;
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       Result := pCNData.FInsLayer;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE CNData_Set_InsLayer(Value: Double);cdecl;
Var
   pCNData:TCNDataObj;
begin
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       with pCNData do 
       begin
          FInsLayer := Value;
          CableDataSetDefaults(CableDataProps.InsLayer, pCNData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION CNData_Get_DiaIns():Double;cdecl;
Var
   pCNData:TCNDataObj;
begin
  Result := 0;
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       Result := pCNData.FDiaIns;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE CNData_Set_DiaIns(Value: Double);cdecl;
Var
   pCNData:TCNDataObj;
begin
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       with pCNData do 
       begin
          FDiaIns := Value;
          CableDataSetDefaults(CableDataProps.DiaIns, pCNData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION CNData_Get_DiaCable():Double;cdecl;
Var
   pCNData:TCNDataObj;
begin
  Result := 0;
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       Result := pCNData.FDiaCable;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE CNData_Set_DiaCable(Value: Double);cdecl;
Var
   pCNData:TCNDataObj;
begin
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       with pCNData do 
       begin
          FDiaCable := Value;
          CableDataSetDefaults(CableDataProps.DiaCable, pCNData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION CNData_Get_k():Integer;cdecl;
Var
   pCNData:TCNDataObj;
begin
  Result := 0;
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       Result := pCNData.FkStrand;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE CNData_Set_k(Value: Integer);cdecl;
Var
   pCNData:TCNDataObj;
begin
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       with pCNData do 
       begin
          FkStrand := Value;
          CNDataSetDefaults(CNDataProps.k, pCNData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION CNData_Get_DiaStrand():Double;cdecl;
Var
   pCNData:TCNDataObj;
begin
  Result := 0;
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       Result := pCNData.FDiaStrand;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE CNData_Set_DiaStrand(Value: Double);cdecl;
Var
   pCNData:TCNDataObj;
begin
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       with pCNData do 
       begin
          FDiaStrand := Value;
          CNDataSetDefaults(CNDataProps.DiaStrand, pCNData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION CNData_Get_GmrStrand():Double;cdecl;
Var
   pCNData:TCNDataObj;
begin
  Result := 0;
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       Result := pCNData.FGmrStrand;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE CNData_Set_GmrStrand(Value: Double);cdecl;
Var
   pCNData:TCNDataObj;
begin
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       with pCNData do 
       begin
          FGmrStrand := Value;
          CNDataSetDefaults(CNDataProps.GmrStrand, pCNData);
       end;
  End;
end;
//------------------------------------------------------------------------------
FUNCTION CNData_Get_RStrand():Double;cdecl;
Var
   pCNData:TCNDataObj;
begin
  Result := 0;
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       Result := pCNData.FRStrand;
  End;
end;
//------------------------------------------------------------------------------
PROCEDURE CNData_Set_RStrand(Value: Double);cdecl;
Var
   pCNData:TCNDataObj;
begin
  IF ActiveCircuit <> NIL
  THEN Begin
       pCNData := CNDataClass.GetActiveObj;
       with pCNData do 
       begin
          FRStrand:= Value;
          CNDataSetDefaults(CNDataProps.RStrand, pCNData);
       end;
  End;
end;

END.
